src/CManager/kubernetes/rules-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-ingress
spec:
  rules:
  - host: adminer
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adminer
            port:
              number: 8080
  - host: salescarweb
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
